重构:调整了之前完全不合理的结构,Player类基本成型,AI代码尚未开始写

--- a/Monopoly/Monopoly.vcxproj
+++ b/Monopoly/Monopoly.vcxproj
@@ -143,6 +143,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Button.h" />
+    <ClInclude Include="game.h" />
     <ClInclude Include="Robbot.h" />
     <ClInclude Include="Cell.h" />
     <ClInclude Include="GameEngine.h" />
@@ -160,6 +161,7 @@
     <ClCompile Include="global.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Manager.cpp" />
+    <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
