添加了玩家信息显示功能

--- a/Monopoly/Monopoly.vcxproj
+++ b/Monopoly/Monopoly.vcxproj
@@ -144,7 +144,7 @@
   <ItemGroup>
     <ClInclude Include="Button.h" />
     <ClInclude Include="game.h" />
-    <ClInclude Include="Robbot.h" />
+    <ClInclude Include="Robot.h" />
     <ClInclude Include="Cell.h" />
     <ClInclude Include="GameEngine.h" />
     <ClInclude Include="global.h" />
