--- a/Monopoly/Monopoly.vcxproj.filters
+++ b/Monopoly/Monopoly.vcxproj.filters
@@ -36,9 +36,6 @@
     <ClInclude Include="global.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="Robbot.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="Button.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -46,6 +43,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="game.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Robot.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
