调整代码结构,方便后续添加,优化界面，加入格子染色机制

--- a/Monopoly/Monopoly.vcxproj
+++ b/Monopoly/Monopoly.vcxproj
@@ -156,6 +156,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cell.cpp" />
+    <ClCompile Include="data.cpp" />
     <ClCompile Include="EasyScene.cpp" />
     <ClCompile Include="GameEngine.cpp" />
     <ClCompile Include="global.cpp" />
