--- a/Monopoly/Monopoly.vcxproj.filters
+++ b/Monopoly/Monopoly.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClCompile Include="Player.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="data.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
