--- a/Monopoly/Monopoly.vcxproj.filters
+++ b/Monopoly/Monopoly.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="Robot.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="AI.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameEngine.cpp">
@@ -72,6 +75,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="data.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Robot.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
